# toolsmax

./: pyproject.toml
.github/workflows/: python-publish-pypi.yaml
toolsmax/: minim.py
